--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         ></video>
 
         <canvas id="canvas" class="border canvasbox"></canvas>
+        <canvas id="result"></canvas>
 
         <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
