--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     </head>
 
     <body class="bx--body p20">
-        <!-- <img id="img" src="hand.jpg"/>  -->
         <div class="p20">
             Handtrack.js allows you prototype handtracking interactions in the
             browser in 10 lines of code.
@@ -37,7 +36,7 @@
         ></video>
 
         <canvas id="canvas" class="border canvasbox"></canvas>
-        <canvas id="result"></canvas>
+        <canvas id="result" width="500" height="500"></canvas>
 
         <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
