--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>
-            Handtrack.js : A library for prototyping realtime handtracking in
-            the browser.
-        </title>
+        <title>Handy</title>
         <link
             rel="stylesheet"
             href="https://unpkg.com/carbon-components@latest/css/carbon-components.css"
@@ -14,10 +11,6 @@
     </head>
 
     <body class="bx--body p20">
-        <div class="p20">
-            Handtrack.js allows you prototype handtracking interactions in the
-            browser in 10 lines of code.
-        </div>
         <div class="mb10">
             <button
                 onclick="toggleVideo()"
@@ -27,12 +20,13 @@
             >
                 Toggle Video
             </button>
-            <div id="updatenote" class="updatenote mt10">loading model ..</div>
+            <!-- <div id="updatenote" class="updatenote mt10">loading model ..</div> -->
         </div>
         <video
             class="videobox canvasbox"
             autoplay="autoplay"
             id="myvideo"
+            style="display: none"
         ></video>
 
         <canvas id="canvas" class="border canvasbox"></canvas>
