--- a/landing.html
+++ b/landing.html
@@ -16,5 +16,6 @@
     <body class="bx--body p20">
         <a href="./index.html">Draw</a>
         <a href="./doctor.html">Doctor</a>
+        <a href="./pong/pong.html">Pong</a>
     </body>
 </html>
