--- a/draw/draw.html
+++ b/draw/draw.html
@@ -7,7 +7,7 @@
             rel="stylesheet"
             href="https://unpkg.com/carbon-components@latest/css/carbon-components.css"
         />
-        <link rel="stylesheet" href="../draw/draw.css" />
+        <link rel="stylesheet" href="draw.css" />
     </head>
 
     <body class="bx--body p20">
@@ -30,8 +30,25 @@
 
         <canvas id="canvas" class="border canvasbox"></canvas>
 
+        <h2 class="game-header">Guess the logo</h2>
+
+        <div class="game-header__container">
+            <h3 class="game-header__company" id="company">Company name</h3>
+            <button id="next-button">Next</button>
+        </div>
+
+        <div class="game">
+            <canvas id="result" width="500" height="500"></canvas>
+            <div class="generator">
+                <button id="generator-button">Show</button>
+                <img src="" alt="" id="generator-img" />
+            </div>
+        </div>
+
         <script src="https://unpkg.com/carbon-components@latest/scripts/carbon-components.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
-        <script src="../draw/draw.js"></script>
+
+        <script src="generator.js"></script>
+        <script src="draw.js"></script>
     </body>
 </html>
