--- a/draw/draw.html
+++ b/draw/draw.html
@@ -33,6 +33,7 @@
         <h2 class="game-header">Guess the logo</h2>
 
         <div class="game-header__container">
+            <button id="clear-button">Clear</button>
             <h3 class="game-header__company" id="company">Company name</h3>
             <button id="next-button">Next</button>
         </div>
