--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
         <a href="./draw/draw.html">Draw</a>
         <a href="./doctor/doctor.html">Doctor</a>
         <a href="./pong/pong.html">Pong</a>
+        <a href="./spaceship/spaceship.html">Spaceship</a>
+        <a href="./sort/sort.html">Sort</a>
     </body>
 </html>
