added new orchestra game

--- a/index.html
+++ b/index.html
@@ -68,6 +68,19 @@
                 </a>
             </div>
         </div>
+
+        <div class="game-link">
+            <div class="game-photos" id="orchestra"></div>
+            <div class="game-info">
+                <a href="./orchestra/orchestra.html">
+                    <div class="game-name">
+                        <h4>Orchestra</h4>
+                        <p>Control your own orchestra!</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+        
     </div>
 </body>
 
