changed description of orchestra game

--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                 <a href="./orchestra/orchestra.html">
                     <div class="game-name">
                         <h4>Orchestra</h4>
-                        <p>Control your own orchestra!</p>
+                        <p>Control your own orchestra! Open your hand to play their music, and close your hands to shut them.</p>
                     </div>
                 </a>
             </div>
         </div>
-        
+
     </div>
 </body>
 
