--- a/index.html
+++ b/index.html
@@ -1,87 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Handy</title>
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/carbon-components@latest/css/carbon-components.css"
+        />
+        <link rel="stylesheet" href="index.css" />
 
-<head>
-    <meta charset="UTF-8" />
-    <title>
-        Handy
-    </title>
-    <link rel="stylesheet" href="https://unpkg.com/carbon-components@latest/css/carbon-components.css" />
-    <link rel="stylesheet" href="index.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Rubik:wght@300&display=swap"
+            rel="stylesheet"
+        />
+    </head>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Rubik:wght@300&display=swap"
-        rel="stylesheet">
-</head>
+    <body class="bx--body p20">
+        <h1>Handy</h1>
+        <h3>Play our games using your palm!</h3>
 
-<body class="bx--body p20">
-    <h1> Handy </h1>
-    <h3>Play our games using your palm!</h3>
-
-    <div id="games">
-
-        <div class="game-link">
-            <div class="game-photos" id="draw"></div>
-            <div class="game-info">
-                <a href="./draw/draw.html">
-                    <div class="game-name">
-                        <h4>Draw</h4>
-                        <p>In this game you have to remember popular brands logos and recreate them!</p>
+        <div id="games">
+            <a href="./draw/draw.html">
+                <div class="game-link">
+                    <div class="game-photos" id="draw"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Draw</h4>
+                            <p>
+                                In this game you have to remember popular brands
+                                logos and recreate them!
+                            </p>
+                        </div>
                     </div>
-                </a>
-            </div>
-        </div>
+                </div>
+            </a>
 
-        <div class="game-link">
-            <div class="game-photos" id="doctor"></div>
-            <div class="game-info">
-                <a href="./doctor/doctor.html">
-                    <div class="game-name">
-                        <h4>Doctor</h4>
-                        <p>In this game you have Sling Ring and you can recreate Dr. Strange's spells!</p>
+            <a href="./doctor/doctor.html">
+                <div class="game-link">
+                    <div class="game-photos" id="doctor"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Doctor</h4>
+                            <p>
+                                In this game you have Sling Ring and you can
+                                recreate Dr. Strange's spells!
+                            </p>
+                        </div>
                     </div>
-                </a>
-            </div>
-        </div>
+                </div>
+            </a>
 
-        <div class="game-link">
-            <div class="game-photos" id="pong"></div>
-            <div class="game-info">
-                <a href="./pong/pong.html">
-                    <div class="game-name">
-                        <h4>Pong</h4>
-                        <p>In this game you mustn't let the ball pass near you!</p>
+            <a href="./pong/pong.html">
+                <div class="game-link">
+                    <div class="game-photos" id="pong"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Pong</h4>
+                            <p>
+                                In this game you mustn't let the ball pass near
+                                you!
+                            </p>
+                        </div>
                     </div>
-                </a>
-            </div>
-        </div>
+                </div>
+            </a>
 
-        <div class="game-link">
-            <div class="game-photos" id="spaceship"></div>
-            <div class="game-info">
-                <a href="./spaceship/spaceship.html">
-                    <div class="game-name">
-                        <h4>Spaceship</h4>
-                        <p>In this game you control the spaceship and have to protect it from asteroids</p>
+            <a href="./spaceship/spaceship.html">
+                <div class="game-link">
+                    <div class="game-photos" id="spaceship"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Spaceship</h4>
+                            <p>
+                                In this game you control the spaceship and have
+                                to protect it from asteroids
+                            </p>
+                        </div>
                     </div>
-                </a>
-            </div>
-        </div>
+                </div>
+            </a>
 
-        <div class="game-link">
-            <div class="game-photos" id="orchestra"></div>
-            <div class="game-info">
-                <a href="./orchestra/orchestra.html">
-                    <div class="game-name">
-                        <h4>Orchestra</h4>
-                        <p>Control your own orchestra! Open your hand to play their music, and close your hands to shut them.</p>
+            <a href="./orchestra/orchestra.html">
+                <div class="game-link">
+                    <div class="game-photos" id="orchestra"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Orchestra</h4>
+                            <p>
+                                Control your own orchestra! Open your hand to
+                                play their music, and close your hands to shut
+                                them.
+                            </p>
+                        </div>
                     </div>
-                </a>
-            </div>
+                </div>
+            </a>
+
+            <a href="./sort/sort.html">
+                <div class="game-link">
+                    <div class="game-photos" id="trash"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Sort it</h4>
+                            <p>
+                                Close your hands to control trash and sort them
+                                to trash cans
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </a>
         </div>
-
-    </div>
-</body>
-
+    </body>
 </html>
