--- a/spaceship/spaceship.html
+++ b/spaceship/spaceship.html
@@ -20,6 +20,10 @@
 
                 <video class="videobox canvasbox" autoplay="autoplay" id="myvideo" style="display: none"></video>
                 <canvas id="canvas" class="border canvasbox"></canvas>
+
+                <button onclick="startGame()" id="trackbutton" class="bx--btn bx--btn--secondary" type="button">
+                    Start Game
+                </button>
             </div>
 
         </div>
