--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
                     </div>
                 </div>
             </a>
+
+            <!-- <a href="./fruit_ninja/fruit_ninja.html">
+                <div class="game-link">
+                    <div class="game-photos" id="trash"></div>
+                    <div class="game-info">
+                        <div class="game-name">
+                            <h4>Sort it</h4>
+                            <p>
+                                Close your hands to control trash and sort them
+                                to trash cans
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </a> -->
         </div>
     </body>
 </html>
